--- a/lectures/day_05/files/flask_counter/templates/index.html
+++ b/lectures/day_05/files/flask_counter/templates/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index.html</title>
+    <title>Document</title>
 </head>
 <body>
     {{session}}
-    <h1>Index</h1>
-    <h3>Create a User</h3>
-    <form action='/users' method='post'>
-       DATA: <input type='text' name='data'>
-        <input type='submit' value='create user'>
-    </form>
-
+    <h1>Counter</h1>
+    <h2>Count: {{session['count']}}</h2>
+    <a href="/">up</a>
+    <a href="">down</a>
+    <a href="/destroy_session">reset</a>
 </body>
 </html>
