--- a/lectures/flask_checklist/flask_app/templates/new_model.html
+++ b/lectures/flask_checklist/flask_app/templates/new_model.html
@@ -9,8 +9,15 @@
     <title>Create model</title>
 </head>
 <body>
-
+    
     <form action="/model/create" method="post" class="col-6 mx-auto">
+        {% with messages = get_flashed_messages() %}     <!-- declare a variable called messages -->
+        {% if messages %}                            <!-- check if there are any messages -->
+            {% for message in messages %}            <!-- loop through the messages -->
+                <p>{{message}}</p>                   <!-- display each message in a paragraph tag -->
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
         <h2 class="text-center">Add model</h2>
         <div class="form-group">
             <label for="column1">column1:</label>
